tests/snapshots/tests_basic_sample__all.snap
---
source: tests/tests-basic-sample.rs
expression: "snapshot_content(\"./test-data/BasicSample.sol\",\n&ValidationOptions::builder().inheritdoc_override(true).constructors(WithParamsRules::required()).enums(WithParamsRules::required()).modifiers(WithParamsRules::required()).structs(WithParamsRules::required()).variables(VariableConfig::builder().private(NoticeDevRules::builder().notice(Req::Required).dev(Req::Required).build(),).internal(NoticeDevRules::builder().notice(Req::Required).dev(Req::Required).build(),).build(),).build(),\ntrue,)"
---
./test-data/BasicSample.sol:5:5
function AbstractBasic.overriddenFunction
  @notice is missing
  @return _returned is missing

./test-data/BasicSample.sol:9:5
struct BasicSample.TestStruct
  @param someAddress is missing
  @param someNumber is missing

./test-data/BasicSample.sol:17:5
enum BasicSample.TestEnum
  @param First is missing
  @param Second is missing

./test-data/BasicSample.sol:23:5
error BasicSample.BasicSample_SomeError
  @param _param1 is missing

./test-data/BasicSample.sol:28:5
event BasicSample.BasicSample_BasicEvent
  @param _param1 is missing

./test-data/BasicSample.sol:39:5
variable BasicSample.somePublicNumber
  @inheritdoc is missing

./test-data/BasicSample.sol:44:5
constructor BasicSample.constructor
  @notice is missing
  @param _randomFlag is missing

./test-data/BasicSample.sol:46:5
function BasicSample.externalSimple
  @inheritdoc is missing

./test-data/BasicSample.sol:64:5
function BasicSample.multiline
  @inheritdoc is missing

./test-data/BasicSample.sol:71:5
function BasicSample.multitag
  @inheritdoc is missing

./test-data/BasicSample.sol:77:5
function BasicSample.externalSimpleMultipleReturn
  @inheritdoc is missing

./test-data/BasicSample.sol:93:5
function BasicSample.externalSimpleMultipleUnnamedReturn
  @inheritdoc is missing

./test-data/BasicSample.sol:102:5
function BasicSample.overriddenFunction
  @inheritdoc is missing

./test-data/BasicSample.sol:109:5
function BasicSample.virtualFunction
  @inheritdoc is missing

./test-data/BasicSample.sol:111:5
modifier BasicSample.transferFee
  @param _receiver is missing

./test-data/BasicSample.sol:130:5
constructor ChildContract.constructor
  @notice is missing

./test-data/BasicSample.sol:132:5
modifier ChildContract.transferFee
  @inheritdoc is missing
