tests/snapshots/tests_basic_sample__basic_sample_constructor.snap
---
source: tests/tests-basic-sample.rs
expression: generate_output(diags)
---
./test-data/BasicSample.sol:22:1
error BasicSample.BasicSample_SomeError
  @param _param1 is missing

./test-data/BasicSample.sol:27:1
event BasicSample.BasicSample_BasicEvent
  @param _param1 is missing

./test-data/BasicSample.sol:44:17
constructor BasicSample.constructor
  missing NatSpec

./test-data/BasicSample.sol:54:5
function BasicSample.externalSimple
  @param _name is present more than once

./test-data/BasicSample.sol:98:5
function BasicSample.externalSimpleMultipleUnnamedReturn
  @return missing for unnamed return #2

./test-data/BasicSample.sol:105:5
function BasicSample.overriddenFunction
  @return _returned is missing

./test-data/BasicSample.sol:114:14
modifier BasicSample.transferFee
  @param _receiver is missing
