tests/snapshots/tests_basic_sample__inheritdoc.snap
---
source: tests/tests-basic-sample.rs
expression: generate_output(diags)
---
./test-data/BasicSample.sol:5:5
function AbstractBasic.overriddenFunction
  @notice is missing
  @return _returned is missing

./test-data/BasicSample.sol:23:5
error BasicSample.BasicSample_SomeError
  @param _param1 is missing

./test-data/BasicSample.sol:28:5
event BasicSample.BasicSample_BasicEvent
  @param _param1 is missing

./test-data/BasicSample.sol:38:1
variable BasicSample.somePublicNumber
  @inheritdoc is missing

./test-data/BasicSample.sol:44:5
constructor BasicSample.constructor
  @param _randomFlag is missing

./test-data/BasicSample.sol:46:5
function BasicSample.externalSimple
  @inheritdoc is missing

./test-data/BasicSample.sol:64:5
function BasicSample.multiline
  @inheritdoc is missing

./test-data/BasicSample.sol:71:5
function BasicSample.multitag
  @inheritdoc is missing

./test-data/BasicSample.sol:77:5
function BasicSample.externalSimpleMultipleReturn
  @inheritdoc is missing

./test-data/BasicSample.sol:93:5
function BasicSample.externalSimpleMultipleUnnamedReturn
  @inheritdoc is missing

./test-data/BasicSample.sol:102:5
function BasicSample.overriddenFunction
  @inheritdoc is missing

./test-data/BasicSample.sol:109:5
function BasicSample.virtualFunction
  @inheritdoc is missing

./test-data/BasicSample.sol:111:5
modifier BasicSample.transferFee
  @param _receiver is missing
